--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ assets/images/.DS_Store
 assets/.DS_Store
 .DS_Store
 .DS_Store
+.DS_Store
+assets/.DS_Store
+assets/css/.DS_Store
+assets/images/.DS_Store
