--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-
-assets/.DS_Store
-assets/images/.DS_Store
-assets/.DS_Store
-.DS_Store
-.DS_Store
-.DS_Store
-assets/.DS_Store
-assets/css/.DS_Store
-assets/images/.DS_Store
-assets/images/.DS_Store
-assets/images/.DS_Store
-assets/.DS_Store
-.DS_Store
-.DS_Store
-.DS_Store
+_site
+.sass-cache
+.jekyll-metadata
