--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Corey Dawkins | Toronto DJ, Producer & Promoter
+email: info@coreydawkins.ca
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Looking for a professional DJ who can cater to any event and keep the crowd entertained? Look no further than Corey Dawkins! With years of experience and a versatile music library that spans all genres, Corey has the expertise and skill to create the perfect vibe for weddings, corporate events, parties, and more. From sound system setup to customized track lists, Corey delivers top-notch service that ensures your event is a success. Book Corey Dawkins today and get ready to dance the night away!
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://coreydawkins.ca" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: dawkskin
+github_username:  CoreyDawkins
 
 # Build settings
 markdown: kramdown
